# mdfic

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
mdfic/: cli.py  copyedit.py  css.py  docx.py  latex.py  makefile.py  tweets.py  utils.py
tests/: conftest.py
tests/assets/multi/: metadata.yaml  multi-01.md  multi-02.md
tests/assets/single/: single.md
tests/cli/: test_cli_copyedit.py  test_cli_pages.py  test_cli_pandoc.py  test_cli_progress.py  test_cli_pure.py
tests/unit/: test_docx_helpers.py  test_latex_helpers.py  test_makefile.py  test_tweets.py  test_utils.py
