[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdfic"
version = "1.1.0"
authors = [
    {name = "JP Fosterson", email = "jp.fosterson@gmail.com"}
]
description = "# MDFIC - Markdown Fiction Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "click",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "markdown",
    "python-docx",
    "PyYAML",
    "keyring>=25.5.0",
]

[project.scripts]
mdfic = "mdfic.cli:cli"

[project.urls]
Homepage = "https://github.com/jpfosterson/mdfic"
Repository = "https://github.com/jpfosterson/mdfic"
Issues = "https://github.com/jpfosterson/mdfic/issues"

[tool.setuptools]
packages = ["mdfic"]

[tool.setuptools.package-dir]
"" = "."

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "pandoc: requires pandoc on PATH",
    "darwin: macOS-only test",
    "network: requires network/external API",
    "git: requires git on PATH",
]
